2003-03-07  Jim Meyering  <jim@meyering.net>

	* getcwd.c: #undef getcwd only after *all* included header files.
	Declare getcwd unconditionally.  The problem was that same.h
	included config.h, and that defined getcwd to rpl_getcwd a second
	time (after the original #undef), and led to the rpl_getcwd
	function calling itself endlessly.  This was the cause of at least
	the `du' test failures on IRIX 6.5, reported by Nelson Beebe.

	* same.h (same_name): Remove unnecessary inclusion of config.h.
	It also happened to lead to infinite recursion in getcwd.c.
	(PARAMS): Remove definition and use.

2003-03-06  Jim Meyering  <jim@meyering.net>

	* ftw.c (ftw_startup): Declare `func' parameter to be of type
	NFTW_FUNC_T, not void* which may be smaller on 64-bit systems.
	Remove now-unnecessary cast.
	(FTW_NAME): Cast func argument to type `NFTW_FUNC_T'.

2003-03-05  Jim Meyering  <jim@meyering.net>

	* physmem.c (ARRAY_SIZE): Define it.

2003-03-04  Jim Meyering  <jim@meyering.net>

	* makepath.c (CLEANUP_CWD): Call error here, now that restore_cwd
	no longer does it.

	* save-cwd.h (restore_cwd): Update prototype.
	* save-cwd.c (restore_cwd): Remove two parameters.
	Simplify.  Don't call error upon failure.  Let callers do that.
	(save_cwd): Mention that Irix 5.3 has the same problem as SunOS4
	when auditing is enabled.  But don't bother updating the #if.

	* xgetcwd.c (xgetcwd): Improve comment.

	* getcwd.c: New file.

2003-02-28  Jim Meyering  <jim@meyering.net>

	* ftw.c (ftw_startup): Return -1 if alloca fails.

2003-02-28  Jim Meyering  <jim@meyering.net>

	* fts.c (fts_children): If opening `.' fails, set the fts_child
	member to NULL before returning.  From NetBSD.

	* fts.c (fts_children): If fchdir fails, close file descriptor
	before returning.  From NetBSD.

2003-02-27  Jim Meyering  <jim@meyering.net>

	* physmem.c (physmem_total, physmem_available): Add comments.
	From Kaveh Ghazi.

	* physmem.c: Merge in portability changes from gcc/libiberty